Auto stash before merge of "main" and "origin/main"

--- a/content/blog/enabling-latex-with-gatsbyjs/index.mdx
+++ b/content/blog/enabling-latex-with-gatsbyjs/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Enabling Latex in A Gatsby-Made Website
+title: Enabling Latex with Gatsby.js
 type: "blog"
 date: 2021-02-13
 published: true
