--- a/content/blog/overview-of-linear-algebra/index.mdx
+++ b/content/blog/overview-of-linear-algebra/index.mdx
@@ -1,11 +1,11 @@
 ---
-title: Overview of Abstract Linear Algebra
+title: Overview of Linear Algebra
 type: "blog"
 date: 2021-03-29
 published: true
 ---
 
-This blog post is my note while I learning Abstract Linear Algebra along the way.
+This blog post is my note while learning Linear Algebra along the way.
 Make sure you are familiar with some math symbols. I will keep updating the content of this page from time to time.
 
 Before reading the rest of the post, you should know a few things.
