font size decreased

--- a/content/portfolio/my-personal-website/index.mdx
+++ b/content/portfolio/my-personal-website/index.mdx
@@ -7,7 +7,7 @@ published: true
 
 I made this website from scratch using a React-based, GraphQL powered, static site generator called [Gatsby.js](https://www.gatsbyjs.com).
 
-![My Personal Website](./web.png)
+![My Personal Website](./personal-website.png)
 
 There are many static site generators, such as [Hugo](https://gohugo.io/) and [Jekyll](https://jekyllrb.com/).
 However, after a thorough research, I chose [Gatsby.js](https://www.gatsbyjs.com) since I wanted to get a better understanding in using [React](https://reactjs.org/).
