--- a/content/blog/enabling-latex-with-gatsbyjs/index.mdx
+++ b/content/blog/enabling-latex-with-gatsbyjs/index.mdx
@@ -5,7 +5,7 @@ date: 2021-02-13
 published: true
 ---
 
-This blog is useful only if you have a website made with Gatsby.JS, and MDX included in the project.
+This blog is useful only if you have a website made with Gatsby.JS and MDX included in the project.
 
 # Install the Dependencies
 ```bash:title=terminal
@@ -36,7 +36,6 @@ module.exports = {
                 },
             ],
             remarkPlugins: [
-                require('remark-math'),
                 require('remark-html-katex')
             ],
         }
@@ -44,13 +43,10 @@ module.exports = {
 }
 ```
 
-On the [official webpage](https://www.gatsbyjs.com/plugins/gatsby-remark-katex/), it doesn't say to install `remark-math` & `remark-html-katex`.
-However, I had to install those two dependencies in the case of making my own. 
-
-`remark-math` is a plugin that converts mathematical equations into HTML elements and `remark-katex-html` is used to wrap those HTML elements in the `<div class="katex-html">...</div>`. 
+However, I had to install `remark-html-katex` because it is used to wrap those HTML elements in the `<div class="katex-html">...</div>`. 
 Without both of these, mathematical equations won't be shown in Latex format.
 
-As for the options, there is a thorough documentation in the link [here](https://katex.org/docs/options.html).
+As for the katex options, there is a thorough documentation [here](https://katex.org/docs/options.html).
 
 # Customize Markdown Elements
 There are many ways to customize the markdown elements, but this is going to be an easy one.
