t-test or z-test blog started

--- a/content/portfolio/my-personal-website/index.mdx
+++ b/content/portfolio/my-personal-website/index.mdx
@@ -25,3 +25,5 @@ Thus, I spent a significant amount of time on how to create a user-friendly webs
 3. Color combination and font size could affect reading experience
 
 My personal website is the result of the aforementioned principles, and it will act as a medium where I can showcase my work and share my knowledge.
+
+*tools*: React.js, Gatsby.js, and GraphQL.js
