--- a/content/blog/fizz-buzz-simple-yet-misunderstood/index.mdx
+++ b/content/blog/fizz-buzz-simple-yet-misunderstood/index.mdx
@@ -75,6 +75,8 @@ for i in range(1, limit):
   
   if(string == ''):
     print(i)
+    continue
+
   print(string)
 ```
 
@@ -92,6 +94,8 @@ for i in range(1, limit):
   
   if(string == ""):
     print(i)
+    continue
+
   print(string)  
 ```
 
@@ -114,4 +118,4 @@ for i in range(1, limit):
   print(string)  
 ```
 
-Clearly, `fizzbuzz-v3.py` is the most efficient solution that we are looking for.
+Clearly, `fizzbuzz-v3.py` is the most efficient solution so far by comparison.
