--- a/content/portfolio/my-personal-website/index.mdx
+++ b/content/portfolio/my-personal-website/index.mdx
@@ -26,4 +26,4 @@ Thus, I spent a significant amount of time on how to create a user-friendly webs
 
 My personal website is the result of the aforementioned principles, and it will act as a medium where I can showcase my work and share my knowledge.
 
-*tools*: React.js, Gatsby.js, and GraphQL.js
+Tools: React.js, Gatsby.js, and GraphQL.js
