blog: t-test or z-test is finished

--- a/content/blog/overview-of-linear-algebra/index.mdx
+++ b/content/blog/overview-of-linear-algebra/index.mdx
@@ -4,3 +4,7 @@ type: "blog"
 date: 2021-05-17
 published: false
 ---
+
+import { Link } from 'gatsby'
+
+<Link to="./vector-space">Vector space</Link>
