--- a/content/blog/t-test-or-z-test/index.mdx
+++ b/content/blog/t-test-or-z-test/index.mdx
@@ -338,7 +338,9 @@ Since we have familiarize ourselves with T-test, I am going to leave this part f
 7. There are two ways of doing T-test and Z-test: one-sample and two-sample testings
 
 # Reference
+* [Hypothesis Testing](https://www.statisticshowto.com/probability-and-statistics/hypothesis-testing/)
 * [Type I Error and Type II Error](https://en.wikipedia.org/wiki/Type_I_and_type_II_errors)
 * [One Sample T-Test](https://www.jmp.com/en_us/statistics-knowledge-portal/t-test/one-sample-t-test.html)
 * [Two Sample T-Test](https://www.jmp.com/en_us/statistics-knowledge-portal/t-test/two-sample-t-test.html)
-* [T-Value Interpretations and Considerations](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5059270/#:~:text=The%20%E2%80%9CP%E2%80%9D%20in%20P%20value,the%20evidence%20against%20H0)
+* [Unpaired Two Sample T-Test](https://www.statsdirect.co.uk/help/parametric_methods/utt.htm)
+* [T-Value Interpretations and Considerations](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5059270/)
