--- a/content/blog/t-test-or-z-test/index.mdx
+++ b/content/blog/t-test-or-z-test/index.mdx
@@ -330,7 +330,7 @@ Since we have familiarize ourselves with T-test, I am going to leave this part f
 # Key points
 
 1. Hypothesis testing is a way to verify our hypothesis
-2. Repeatable and testable experiment is useful or more significant for everyone
+2. A repeatable and testable experiment is useful and more significant for everyone
 3. T-test is used when the standard deviation is unknown, and the number of data points is $(n < 30)$
 4. Z-test is used when the standard deviation is known, and the number of data points are $(n \geq 30)$
 5. Define the null hypothesis, the alternative hypothesis, and the alpha value way before the experiment starts
