--- a/content/blog/t-test-or-z-test/index.mdx
+++ b/content/blog/t-test-or-z-test/index.mdx
@@ -334,7 +334,7 @@ Since we have familiarize ourselves with T-test, I am going to leave this part f
 3. T-test is used when the standard deviation is unknown, and the number of data points is $(n < 30)$
 4. Z-test is used when the standard deviation is known, and the number of data points are $(n \geq 30)$
 5. Define the null hypothesis, the alternative hypothesis, and the alpha value way before the experiment starts
-6. Widely accepted alpha value is $0.05$, and migth differ on any circumstances
+6. Widely accepted alpha value is $0.05$, and migth differ on different experiments
 7. There are two ways of doing T-test and Z-test: one-sample and two-sample testings
 
 # Reference
