Typo and grammar fixed

--- a/content/blog/t-test-or-z-test/index.mdx
+++ b/content/blog/t-test-or-z-test/index.mdx
@@ -11,8 +11,8 @@ To make things simple, I am only going to discuss the difference between T-Test 
 
 Before we jump into the definitions of those two, we should know the definition of hypothesis testing.
 Hypothesis testing is a way to verify our hypothesis on a population or multiple populations.
-The core idea of hypothesis testing is to see if our experiement is repeatable and testable with scientific techniques, not merely an experiment with a result that is acquire by chance.
-An experiment with an extreme result is not useful for anyone.
+The core idea of hypothesis testing is to see if our experiment is repeatable and testable with scientific techniques, not merely an experiment with an extreme result that is acquired by chance.
+Experiments with extreme results are not useful for anyone since they are not predictable.
 
 Let's say a transportation company claimed that the average waiting time for someone to get on a bus is 1 minute.
 However, we are not sure that whether it's true as if it's too good to be true.
